# nano-get

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: checker.yml  publish.yml  rust.yml
docs/compliance/: http11-get-head-full-compliance-checklist.md  http11-get-head-requirement-test-index.md  http11-get-head-rfc-matrix.md
examples/: README.md  nano-get-bench.rs
examples/advanced-client/: main.rs
examples/basic-auth/: main.rs
examples/custom-auth-handler/: main.rs
examples/get-bytes/: main.rs
examples/head-request/: main.rs
examples/memory-cache/: main.rs
examples/protocol-specific-helpers/: main.rs
examples/proxy-and-proxy-auth/: main.rs
examples/request-builder/: main.rs
examples/session-reuse-and-pipelining/: main.rs
examples/simple-get/: main.rs
src/: auth.rs  client.rs  date.rs  errors.rs  http.rs  https.rs  lib.rs  request.rs  response.rs
src/asyn/: mod.rs
src/http/: mod.rs
src/https/: mod.rs
src/url/: mod.rs  models.rs
tests/: auth_integration.rs  http_integration.rs  https_integration.rs
tests/support/: mod.rs
tools/: check_compliance_docs.py  check_line_coverage.py
