[package]
name = "nano-get"
description = """
A very tiny implementation of HTTP(s) GET, using minimal dependencies.
"""
version = "0.2.1"
authors = ["Rahul Thomas <rapidclock@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/rapidclock/nano-get"
documentation = "https://docs.rs/nano-get"
keywords = [
	"http",
	"https",
	"https-client",
	"http-get",
	"http-client",
]
categories = ["network-programming", "web-programming"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10.26", optional = true }

[features]
http = []
https = ["openssl"]
default = ["http"]